--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@hookform/resolvers": "^5.2.1",
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
+    "framer-motion": "^6",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "typescript": "^5",
