--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/web-app/node_modules
+node_modules/
+**/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -9,6 +10,11 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+
+# lock files (optional - you may want to commit these)
+# package-lock.json
+# bun.lock
+# yarn.lock
 
 # testing
 /coverage
@@ -42,3 +48,23 @@ next-env.d.ts
 
 # firebase
 serviceAccountKey.json
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+functions/.env
+
+# firebase functions
+functions/lib/
+functions/.env
+**/firebase-debug.log
+**/firestore-debug.log
+
+# compiled output
+dist/
+build/
+lib/
+out/
+
+# runtime logs  
+logs
+*.log
