--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,11 @@
 {
   "functions": {
-    "source": "../functions",
-    "runtime": "nodejs18"
+    "source": "functions",
+    "runtime": "nodejs20"
   },
   "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "rules": "web-app/firestore.rules",
+    "indexes": "web-app/firestore.indexes.json"
   },
   "emulators": {
     "functions": {
