--- a/web-app/package.json
+++ b/web-app/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.4.0",
     "framer-motion": "^6",
+    "lottie-react": "^2.4.1",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
